--- a/hamza.html
+++ b/hamza.html
@@ -1,7 +1,18 @@
-<p>Hei<span id="user"></span></p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    </html><p>Hei<span id="user"></span></p>
 
 <script>
 
 const user_name = Hamza;
 document.getElementById("user").innerHTML = user_name;
 <script>
+    
+</body>
