--- a/hamza.html
+++ b/hamza.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    </html><p>Hei<span id="user"></span></p>
-
+    <p>Hei <span id="user"></span></p>
 <script>
-
-const user_name = Hamza;
+/* Vi har hentet brukerinformasjon, og lagret navnet til brukeren i en variabel kalt user_name*/
+const user_name = "Hamza";
+//Så fyller vi inn brukernavnet i HTMLen som viser teksten "Hei Brukernavn"
 document.getElementById("user").innerHTML = user_name;
-<script>
-    
+</script>
+
 </body>
