--- a/errors.html
+++ b/errors.html
@@ -1,17 +1,18 @@
 <p id="melding"></p>
 
-<script
-
-const user_name = "marius"
+<script>
 
 
-const user_birthyear =1983 
+const user_name = "marius";
 
 
-const age="2022" - user=birthyear 
+const user_birthyear = 1983;
+
+const age= 2022 - user_birthyear;
 
 
-const utskrift = "hei" user_name + "(" + age +"år)";
+const utskrift = "hei " + user_name + "(" + age + " år")";";
 
 
 document.getElementById("melding").innerHTML = utskrift;
+</script>
