--- a/errors.html
+++ b/errors.html
@@ -1,4 +1,12 @@
-<p id="melding"></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p id="melding"></p>
 
 <script>
 
@@ -11,8 +19,14 @@ const user_birthyear = 1983;
 const age= 2022 - user_birthyear;
 
 
-const utskrift = "hei " + user_name + "(" + age + " år")";";
+const utskrift = "hei " + user_name + " (" + age + " år)";
+
 
 
 document.getElementById("melding").innerHTML = utskrift;
 </script>
+
+    
+</body>
+</html>
+
