--- a/conditional_logic.html
+++ b/conditional_logic.html
@@ -12,7 +12,7 @@
     
     <h2 >Kan jeg åpne døren</h2>
 
-    <p id=" dørmsgg"></p>
+    <p id="doormsg"></p>
 <script>
 
     const age  = 10;
@@ -30,7 +30,7 @@
     const door_locked = true
     const backpack = "key"
 
-    let utskrift = document.getElementById("dørmsgg")
+    let utskrift = document.getElementById("doormsg")
 
 if (door_locked === false) {
     utskrift.innerHTML = "døren er åpen, du kan gå inn";
