--- a/if4.html
+++ b/if4.html
@@ -8,7 +8,7 @@
 <body>
     <p id = "utskrift"></p>
     <script>
-        
-
+        // Your JavaScript code goes here
+    </script>
 </body>
 </html>
